--- a/StylesPeliculas.css
+++ b/StylesPeliculas.css
@@ -100,3 +100,14 @@ form input[type="submit"]:hover {
         width: 18%; /* Displaying five items per row */
     }
 }
+
+  /* Estilos adicionales para centrar los botones */
+#question-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.question button {
+    margin: 5px;
+}
