--- a/StylesPeliculas.css
+++ b/StylesPeliculas.css
@@ -106,6 +106,7 @@ form input[type="submit"]:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding:20%;
 }
 
 .question button {
