--- a/StylesPeliculas.css
+++ b/StylesPeliculas.css
@@ -2,8 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
-
+.content {
+    flex: 1;
+}
 header {
     background-color: #3e64a5;
     color: #fff;
